Merlin Pass/force-app/main/default/objects/Attraction__c/Attraction__c.object-meta.xml
<CustomObject>
    <description>This is used to store attraction data and related details</description>
    <label>Attraction</label>
    <nameField>
        <label>Attraction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>