Merlin Pass/force-app/main/default/objects/Attraction__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Field To Hold Address of Attraction</description>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>