Merlin Pass/force-app/main/default/objects/Attraction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field to hold attraction description</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>