Merlin Pass/force-app/main/default/objects/Attraction__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Field to hold geolocation of the location to show on map</description>
    <label>Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>