Merlin Pass/force-app/main/default/objects/Attraction__c/fields/Location_Image__c.field-meta.xml
<CustomField>
    <fullName>Location_Image__c</fullName>
    <description>field to hold image of location</description>
    <label>Location Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>